# university-project-kinba

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Vagrantfile  requirements.pip  setup.sh
KINBA/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
KINBA/devel/share/kinba_brain/cmake/: kinba_brainConfig.cmake
KINBA/devel/share/kinba_face/cmake/: kinba_faceConfig.cmake
KINBA/src/kinba_brain/: CMakeLists.txt  package.xml
KINBA/src/kinba_brain/launch/: brain.launch
KINBA/src/kinba_brain/src/: apiai.py  chatbot.py  weather.py
KINBA/src/kinba_face/: CMakeLists.txt  package.xml  test_chatbot.py
KINBA/src/kinba_face/launch/: face.launch
KINBA/src/kinba_face/src/: brightness.py  chatbot.py  ear.py  eye.py  looking.py  mouth.py  speech_to_text.py  text_to_speech.py  weather.py
KINBA/src/kinba_face/test/: test_mouth.py
KINBA/tests/: test_roslaunch.py
aiml/: bot_profile.aiml  weather.xml
main/: __init__.py  main.py  settings.py  speech.py  vision.py  weather.py
playbook/: hosts.yml  playbook.yml
playbook/group_vars/: all.yml
playbook/roles/vikashkothary.ros_install/defaults/: main.yml
playbook/roles/vikashkothary.ros_install/meta/: main.yml
playbook/roles/vikashkothary.ros_install/tasks/: main.yml
playbook/roles/vikashkothary.virtualenv/defaults/: main.yml
playbook/roles/vikashkothary.virtualenv/meta/: main.yml
playbook/roles/vikashkothary.virtualenv/tasks/: main.yml
scripts/: boot.sh  connect_microphone.sh  install-ansible.sh  reset.sh  run.sh  setup.sh
src/: main.py  settings.py  speech.py
tests/: test_weather.py
