<package>
  <name>kinba_face</name>
  <version>0.0.0</version>

  <description>The kinba face sensors package: eyes, ears and mouth</description>

  <maintainer email="kothary.vikash@gmail.com">Vikash Kothary</maintainer>
  <license>MIT</license>
  <author email="kothary.vikash@gmail.com">Vikash Kothary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>